Bug #116377 Unable to log in after upgrading to workbench 8.0.40
Submitted: 16 Oct 2024 13:49 Modified: 5 Nov 2024 10:26
Reporter: IGG t Email Updates:
Status: Closed Impact on me:
None 
Category:MySQL Workbench Severity:S1 (Critical)
Version:8.0.40 OS:Any
Assigned to: CPU Architecture:Any
Tags: regression

[16 Oct 2024 13:49] IGG t
Description:
I just upgraded from MySQL Workbench 8.0.38 to 8.0.40, and following the update I was unable to log into any databases. I simply got the error:

Exception: Authentication plugin '' cannot be loaded: The specified module could not be found

This was the same on all databases I tried, the majority are running MySQL 8.0.39
My User is using caching_sha2_password.

Downgrading back to workbench 8.0.38 fixed the problem.

How to repeat:
Confirm you can access MySQL

download and upgrade workbench to 8.0.40

Try and login again.

Suggested fix:
Make it so that workbench can find the specified module.
[16 Oct 2024 14:10] Andrew Stickler
I have exactly the same problem.
[17 Oct 2024 0:43] Dougal McRae
I encountered the same error after upgrading from 8.0.25 to 8.0.40.

Uninstalled 8.0.40 and installed 8.0.38 (based user 'IGG t' saying their 8.0.38 was working OK) and that worked.
[17 Oct 2024 1:21] Sebin Benjamin
This is what the log says

14:08:54 [INF][      WBContext]: System info:
 	MySQL Workbench Community (GPL) for Windows version 8.0.40 CE build 4545542 (64 bit)
	Configuration Directory: C:\Users\sebin\AppData\Roaming\MySQL\Workbench
	Data Directory: D:\Program Files\MySQL\MySQL Workbench 8.0 CE
	Cairo Version: 1.18.0
	OS: Microsoft Windows 10 Pro
	CPU: 8x Intel(R) Core(TM) i5-10210U CPU @ 1.60GHz, 15.7 GiB RAM
	Active video adapter Intel(R) UHD Graphics
	Installed video RAM: 1024 MB
	Current video mode: 1920 x 1080 x 4294967296 colors
	Used bit depth: 32
	Driver version: 30.0.101.1338
	Installed display drivers: C:\WINDOWS\System32\DriverStore\FileRepository\iigd_dch.inf_amd64_52ad2da9d64c0488\igdumdim64.dll,C:\WINDOWS\System32\DriverStore\FileRepository\iigd_dch.inf_amd64_52ad2da9d64c0488\igd10iumd64.dll,C:\WINDOWS\System32\DriverStore\FileRepository\iigd_dch.inf_amd64_52ad2da9d64c0488\igd10iumd64.dll,C:\WINDOWS\System32\DriverStore\FileRepository\iigd_dch.inf_amd64_52ad2da9d64c0488\igd12umd64.dll
	Current user language: English (New Zealand)

14:08:54 [INF][      Workbench]: UI is up
14:08:54 [INF][      Workbench]: Running the application
14:09:30 [ERR][SQL Editor Form]: SqlEditorForm: exception in do_connect method: Exception: Authentication plugin 'mysql_native_password' cannot be loaded: The specified module could not be found.

14:09:30 [ERR][  GRTDispatcher]: exception in grt execute_task, continuing: Exception: Authentication plugin 'mysql_native_password' cannot be loaded: The specified module could not be found.

14:09:30 [ERR][  GRTDispatcher]: worker: task 'execute sql queries' has failed with error:.Authentication plugin 'mysql_native_password' cannot be loaded: The specified module could not be found.

14:09:31 [ERR][SQL Editor Form]: SQL editor could not be connected: Authentication plugin 'mysql_native_password' cannot be loaded: The specified module could not be found.

14:09:31 [ERR][SQL Editor Form]: Your connection attempt failed for user 'candidate-360' to the MySQL server at 127.0.0.1:3306:
  Authentication plugin 'mysql_native_password' cannot be loaded: The specified module could not be found.
[17 Oct 2024 6:04] MySQL Verification Team
Bug #116384 marked as duplicate of this one
[17 Oct 2024 6:18] MySQL Verification Team
Hello IGG t,

Thank you for the report and feedback.
Verified as described.

regards,
Umesh
[17 Oct 2024 13:41] MySQL Verification Team
Bug #116395 marked as duplicate of this one
[17 Oct 2024 21:40] Ross Coundon
Also started happening on MacOS Sequioa with upgrade to version 8.0.40
[18 Oct 2024 3:59] MySQL Verification Team
Seen on Windows/MacOS (surely on other WB supported OS platforms as well)
[18 Oct 2024 4:00] MySQL Verification Team
Bug #116399 marked as duplicate of this one
[18 Oct 2024 21:34] Rob Roselius
Similar issue on MacOS, MWB 8.0.40

When trying to connect as root to MySQL server (MAMP 7.1, mysql 8.0.35), MWB cannot connect:

Your connection attempt failed for user 'root' to the MySQL server at localhost:3306:
Authentication plugin 'mysql_native_password' cannot be loaded: dlopen(/usr/local/mysql/lib/plugin/mysql_native_password.so, 0x0002): tried: '/usr/local/mysql/lib/plugin/mysql_native_password.so' (no such file), '/System/Volumes/Preboot/Cryptexes/OS/usr/local/mysql/lib/plugin/mysql_native_password.so' (no such file), '/usr/local/mysql/lib/plugin/mysql_native_password.so' (no such file)
[19 Oct 2024 13:11] MySQL Verification Team
Bug #116413 marked as duplicate of this one
[20 Oct 2024 14:43] MySQL Verification Team
Bug #116417 marked as duplicate of this one
[21 Oct 2024 18:50] Fernando Hartmann
Same problem here. Windows 11 running Workbench 8.0.40
[22 Oct 2024 5:10] MySQL Verification Team
Bug #116416 marked as duplicate of this one
[22 Oct 2024 7:39] DBA Bullhorn
Upgraded from 8.0.38 to 8.0.40 and encountering same issue.

I notice verification team is just closing out duplicate bugs but no investigation/fix is being attempted (yet).
[22 Oct 2024 12:40] James Bewley
Really? MySQL workbench 8.0.40 isn't compatible with 8.0.40 server? Is there anyone even doing the minimal amount of testing at Oracle for this enterprise product?
[22 Oct 2024 14:14] Zilvinas Racyla
Same problem here. Windows 11 running Workbench 8.0.40
[22 Oct 2024 19:08] Eduardo Falcao
Same issue on macOS Sequoia running Workbench 8.0.40. 8.0.38 works fine
[23 Oct 2024 7:11] Michael Roemer
We noticed that we can connect with users that were CREATED with the caching_sha2_password plugin.

If we change the authentication plugin for users created with mysql_native_password to caching_sha2_password, we see the error message:

Authentication plugin '' cannot be loaded: The specified module could not be found

For users that use mysql_native_password, we see the error message:

Authentication plugin 'mysql_native_password' cannot be loaded: The specified module could not be found

Dropping and re-creating the user with caching_sha2_password fixes the connection problem.

However, changing the authentication method from mysql_native_password to caching_sha2_password should also fix the connection (which it does not, see above).
[23 Oct 2024 7:58] Michael Roemer
Correction on my previous comment "[23 Oct 7:11] Michael Roemer":

We see the error "Authentication plugin '' cannot be loaded: The specified module could not be found" only if the default_authentication_plugin is set to mysql_native_plugin (SHOW VARIABLES LIKE 'default_authentication_plugin').

When we change the default_authentication_plugin to caching_sha2_password, changing the authentication plugin for a user from mysql_native_password to caching_sha2_password allows connection.
[26 Oct 2024 10:03] Mike Zinner
Hi All,

Thanks for reporting the issue.

libmysqlclient (as used by MySQL Connector/C++ 9.1.0 as used by MySQL Workbench) moved the support for mysql_native_password into a loadable plugin, mysql_native_password.so / .dll and it seems we missed to add this file to the package creation scripts before creating the final MySQL Workbench packages.

We will review our MySQL Workbench packaging scripts, fix the issue and re-release the MySQL Workbench packages.

Thanks,
Mike
[26 Oct 2024 12:41] MySQL Verification Team
Bug #116481 marked as duplicate of this one
[26 Oct 2024 15:10] MySQL Verification Team
Bug #116483 marked as duplicate of this one
[28 Oct 2024 10:30] Valerio Messina
It is really worrying that you have not tested the final distributed package.
Since it always gives an error to all users, with any connection to DBs, it is impossible not to notice it when you try it. ISO9000?
[28 Oct 2024 15:36] MySQL Verification Team
Bug #116493 marked as duplicate of this one
[4 Nov 2024 1:54] Wee Kiat Tay
This bug taking so long to resolve, I have now dropped MySQL Workbench and started using other better clients like DBeaver.
[4 Nov 2024 1:54] Wee Kiat Tay
This bug taking so long to resolve, I have now dropped MySQL Workbench and started using other better clients like DBeaver.
[4 Nov 2024 5:10] MySQL Verification Team
Bug #116533 marked as duplicate of this one
[4 Nov 2024 6:00] MySQL Verification Team
https://dev.mysql.com/doc/relnotes/workbench/en/news-8-0-40.html

8.0.40 WB was re-released again.  Did anybody check if that resolves it?
[4 Nov 2024 6:27] Balasubramanian Kandasamy
Thanks for the bug report.

We have re-published the Workbench 8.0.40 release with the mysql_native_password authentication plugin fix.

If you installed the original release, then uninstall it before installing the newer version.
[4 Nov 2024 9:50] Ross Coundon
I can confirm that the newly published 8.0.40 fixes the issue for me on Mac Sequioa
[25 Mar 2025 13:12] MySQL Verification Team
Bug #117789 marked as duplicate of this one
[26 Mar 2025 8:06] Zilvinas Racyla
It's just a shame that it took so long. What does it tell us - users/ customers?
[26 Mar 2025 8:41] Valerio Messina
I can confirm 8.0.40 WB re-release resolves. Also 8.0.41 work
Windows 10