Bug #116377 Unable to log in after upgrading to workbench 8.0.40